k8s/deployment_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-deployment
  template:
    metadata:
      labels:
        app: front-deployment
    spec:
      containers:
      - name: front-deployment
        image: avi03/frontimage1:v2
        ports:
        - containerPort: 3000
