k8s/service_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-back-service
spec:
  selector:
    app: backend-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
